--- a/app/views/report/show.html.erb
+++ b/app/views/report/show.html.erb
@@ -8,7 +8,7 @@
         <% resolution = "fa-times" %>
         <% text = "Não resolvido" %>
         <% state = "danger" %>
-        <% else if u.resolution == "verifyng" %>
+        <% else if u.resolution == "verifying" %>
           <% resolution = "fa-exclamation" %>
           <% text = "Analisando" %>
           <% state = "warning" %>
