--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -5,19 +5,9 @@
   <div class="row tile_count">
     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count" id="TAH">
     </div>
-    <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-      <span class="count_top"><i class="fa fa-clock-o"></i> Tempo Médio Aberto</span>
-      <!-- aqui pega quanto tempo ficou aberto em média até o dia atual (de domingo até hoje dividido pelo numero de dias rolados -->
-      <div class="count">123.50</div>
-      <!-- aqui precisa pegar a soma do tempo da semana passada inteira -->
-      <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>3% </i> From last Week</span>
+    <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count" id="TMA">
     </div>
-    <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-      <span class="count_top"><i class="fa fa-user"></i> Usuários Cadastrados</span>
-      <!-- aqui a gente infere o pico de usuários no dia atual -->
-      <div class="count green">2,500</div>
-      <!-- aqui a gente infere o pico de usuários na semana inteira passada -->
-      <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>
+    <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count" id="UC">
     </div>
     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
       <span class="count_top"><i class="fa fa-user"></i> Reports Não Resolvidos</span>
@@ -352,27 +342,38 @@
 <!-- /page content -->
 <script>
 $(document).ready(function() {
+// TEMPO ABERTO HOJE
 <% time_open_today = @labopen_today.to_json %>
 time_open_today_chart = <%= raw time_open_today%>;
 
 <% time_open_today_week = @labopen_today_and_week_ago.to_json %>
 time_open_today_week_chart = <%= raw time_open_today_week%>;
 
-$("#TAH").append("<span class='count_top'><i class='fa fa-user'></i> Tempo Aberto Hoje</span>");
-
-if(time_open_today_chart < 60){
-  $("#TAH").append("<div class='count'> &gt; 1 Min </div>");
-}else if(time_open_today_chart > 60 && time_open_today_chart < 3600){
-  $("#TAH").append("<div class='count'>"+ Math.floor(time_open_today_chart/60) +" Min </div>");
-}else if(time_open_today_chart > 3600 && time_open_today_chart < 7200){
-  $("#TAH").append("<div class='count'> 1 Hr </div>");
-}else{
-  $("#TAH").append("<div class='count'> "+ Math.floor(time_open_today_chart/3600) +" Hrs </div>");
-}
-
 var porcentagem = time_open_today_chart - time_open_today_week_chart;
 porcentagem = porcentagem / time_open_today_chart;
 porcentagem = porcentagem * 100;
+
+var adicao;
+
+if(time_open_today_chart > time_open_today_week_chart){
+  adicao = " green";
+}else if(time_open_today_chart < time_open_today_week_chart){
+  adicao = " red";
+}else{
+  adicao = "";
+}
+
+$("#TAH").append("<span class='count_top'><i class='fa fa-user'></i> Tempo Aberto Hoje</span>");
+
+if(time_open_today_chart < 60){
+  $("#TAH").append("<div class='count"+ adicao +"'> &gt; 1 Min </div>");
+}else if(time_open_today_chart > 60 && time_open_today_chart < 3600){
+  $("#TAH").append("<div class='count"+ adicao +"'>"+ Math.floor(time_open_today_chart/60) +" Min </div>");
+}else if(time_open_today_chart > 3600 && time_open_today_chart < 7200){
+  $("#TAH").append("<div class='count"+ adicao +"'> 1 Hr </div>");
+}else{
+  $("#TAH").append("<div class='count"+ adicao +"'> "+ Math.floor(time_open_today_chart/3600) +" Hrs </div>");
+}
 
 if(time_open_today_chart > time_open_today_week_chart){
   $("#TAH").append("<span class='count_bottom'><i class='green'><i class='fa fa-sort-asc'></i>"+ Math.floor(porcentagem) +"</i> que semana passada</span>");
@@ -381,6 +382,59 @@ if(time_open_today_chart > time_open_today_week_chart){
 }else{
   $("#TAH").append("<span class='count_bottom'><i class='gray'>Igual</i> a semana passada</span>");
 }
+});
+
+$(document).ready(function() {
+// TEMPO MÉDIO ABERTO ESSA SEMANA
+<% time_open_week = @labopen_week.to_json %>
+time_open_week_chart = <%= raw time_open_week%>;
+
+<% time_open_last_week = @labopen_last_week.to_json %>
+time_open_last_week_chart = <%= raw time_open_last_week%>;
+
+var porcentagem = time_open_week_chart - time_open_last_week_chart;
+porcentagem = porcentagem / time_open_week_chart;
+porcentagem = porcentagem * 100;
+
+var adicao;
+
+if(time_open_week_chart > time_open_last_week_chart){
+  adicao = " green";
+}else if(time_open_week_chart < time_open_last_week_chart){
+  adicao = " red";
+}else{
+  adicao = "";
+}
+
+$("#TMA").append("<span class='count_top'><i class='fa fa-clock-o'></i> Tempo Médio Aberto</span>");
+
+if(time_open_week_chart < 60){
+  $("#TAH").append("<div class='count"+ adicao +"'> &gt; 1 Min </div>");
+}else if(time_open_week_chart > 60 && time_open_week_chart < 3600){
+  $("#TAH").append("<div class='count"+ adicao +"'>"+ Math.floor(time_open_week_chart/60) +" Min </div>");
+}else if(time_open_week_chart > 3600 && time_open_week_chart < 7200){
+  $("#TAH").append("<div class='count"+ adicao +"'> 1 Hr </div>");
+}else{
+  $("#TAH").append("<div class='count"+ adicao +"'> "+ Math.floor(time_open_week_chart/3600) +" Hrs </div>");
+}
+
+if(time_open_week_chart > time_open_last_week_chart){
+  $("#TAH").append("<span class='count_bottom'><i class='green'><i class='fa fa-sort-asc'></i>"+ Math.floor(porcentagem) +"</i> que semana passada</span>");
+}else if(time_open_week_chart < time_open_last_week_chart){
+  $("#TAH").append("<span class='count_bottom'><i class='red'><i class='fa fa-sort-desc'></i>"+ Math.floor(porcentagem) +"</i> que semana passada</span>");
+}else{
+  $("#TAH").append("<span class='count_bottom'><i class='gray'>Igual</i> a semana passada</span>");
+}
+});
+
+$(document).ready(function() {
+// Contador de usuários
+<% count_users = @users_count.to_json %>
+count_usuarios = <%= raw count_users%>;
+
+$("#UC").append("<span class='count_top'><i class='fa fa-user'></i> Usuários Cadastrados</span>");
+$("#UC").append("<div class='count'>"+count_usuarios+"</div>");
+//<span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>
 });
 
 $(document).ready(function() {
