--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -419,9 +419,9 @@ if(time_open_week_chart < 60){
 }
 
 if(time_open_week_chart > time_open_last_week_chart){
-  $("#TAH").append("<span class='count_bottom'><i class='green'><i class='fa fa-sort-asc'></i>"+ Math.floor(porcentagem) +"</i> que semana passada</span>");
+  $("#TAH").append("<span class='count_bottom'><i class='green'><i class='fa fa-sort-asc'></i>"+ Math.floor(porcentagem) +"%</i> que semana passada</span>");
 }else if(time_open_week_chart < time_open_last_week_chart){
-  $("#TAH").append("<span class='count_bottom'><i class='red'><i class='fa fa-sort-desc'></i>"+ Math.floor(porcentagem) +"</i> que semana passada</span>");
+  $("#TAH").append("<span class='count_bottom'><i class='red'><i class='fa fa-sort-desc'></i>"+ Math.floor(porcentagem) +"%</i> que semana passada</span>");
 }else{
   $("#TAH").append("<span class='count_bottom'><i class='gray'>Igual</i> a semana passada</span>");
 }
@@ -433,7 +433,10 @@ $(document).ready(function() {
 count_usuarios = <%= raw count_users%>;
 
 $("#UC").append("<span class='count_top'><i class='fa fa-user'></i> Usuários Cadastrados</span>");
-$("#UC").append("<div class='count'>"+count_usuarios+"</div>");
+if(count_usuarios != 1)
+  $("#UC").append("<div class='count'>"+count_usuarios+" usuários</div>");
+else
+  $("#UC").append("<div class='count'>"+count_usuarios+" usuário</div>");
 //<span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>
 });
 
