--- a/app/views/dashboard/map.html.erb
+++ b/app/views/dashboard/map.html.erb
@@ -30,8 +30,8 @@
           <% end %>
           <div class="clearfix"></div>
           <div class="labels" style="text-align: center">
-            <div class="col-xs-6 col-sm-4"><div class="label_status" style="background-color: green"></div> Disponível</div>
-            <div class="col-xs-6 col-sm-4"><div class="label_status" style="background-color: red"></div> Ocupado</div>
+            <div class="col-xs-6 col-sm-4"><div class="label_status" style="background-color: green"></div> Ligado</div>
+            <div class="col-xs-6 col-sm-4"><div class="label_status" style="background-color: red"></div> Desligado</div>
             <div class="col-xs-12 col-sm-4"><div class="label_status" style="background-color: gray"></div> Em manutenção</div>
           </div>
 
