--- a/app/views/laboratory/show.html.erb
+++ b/app/views/laboratory/show.html.erb
@@ -131,8 +131,8 @@
             <div class="<%= @computers.find_by(:physical_id=> 27).last_status%>">PC 27</div>
           </div>
           <div class="container-label" style="text-align: center">
-            <div class="label_status" style="background-color: green"></div> Disponível
-            <div class="label_status" style="background-color: red"></div> Ocupado
+            <div class="label_status" style="background-color: green"></div> Ligado
+            <div class="label_status" style="background-color: red"></div> Desligado
             <div class="label_status" style="background-color: gray"></div> Em manutenção
           </div>
           <div style="text-align: center">
