--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -9,18 +9,9 @@
     </div>
     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count" id="UC">
     </div>
-    <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-      <span class="count_top"><i class="fa fa-user"></i> Reports Não Resolvidos</span>
-      <!-- Só pegar o número de reports que ainda estão marcados como não resolvidos -->
-      <div class="count">4,567</div>
-      <!-- Pega o número total de reports no sistema (vai ser usado na geração do código abaixo) -->
-      <span class="count_bottom"><i class="red"><i class="fa fa-sort-desc"></i>12% </i> From last Week</span>
+    <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count" id="nReport">
     </div>
-    <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-      <span class="count_top"><i class="fa fa-user"></i> Reports Totais </span>
-      <!-- Pegar o número total de reports (que no caso foi feito acima) -->
-      <div class="count">2,315</div>
-      <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>
+    <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count" id="tReport">
     </div>
     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
       <span class="count_top"><i class="fa fa-user"></i> DComp: Servidor Offline</span>
@@ -290,6 +281,36 @@
 
   <div class="row">
     <div class="col-md-4 col-sm-4 col-xs-12">
+      <div class="x_panel">
+        <div class="x_title">
+          <h2>Últimos Reports </h2>
+          <ul class="nav navbar-right panel_toolbox">
+            <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">Settings 1</a>
+                </li>
+                <li><a href="#">Settings 2</a>
+                </li>
+              </ul>
+            </li>
+            <li><a class="close-link"><i class="fa fa-close"></i></a>
+            </li>
+          </ul>
+          <div class="clearfix"></div>
+        </div>
+        <div class="x_content">
+          <div class="dashboard-widget-content">
+            <ul class="list-unstyled timeline widget" id="listReport">               
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4 col-sm-4 col-xs-12">
       <div class="x_panel tile fixed_height_320 overflow_hidden">
         <div class="x_title">
           <h2>Computadores com mais Reports</h2>
@@ -440,6 +461,94 @@ else
 //<span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>
 });
 
+$(document).ready(function(){
+// Sumariza os reports
+<% pendingPorts = @reports_pending.to_json %>
+pPorts = <%= raw pendingPorts%>;
+
+<% totalPorts = @total_reports.to_json %>
+tPorts = <%= raw totalPorts%>;
+
+var porcentagem = pPorts - tPorts;
+porcentagem = porcentagem / tPorts;
+porcentagem = porcentagem * 100;
+
+$("#nReport").append("<span class='count_top'><i class='fa fa-user'></i> Reports Não Resolvidos</span>");
+if(pPorts != 0){
+  $("#nReport").append("<div class='count green'>"+ pPorts +"</div>");
+}else{
+  $("#nReport").append("<div class='count'>"+ pPorts +"</div>");
+}
+
+if(pPorts != 0){
+  $("#nReport").append("<span class='count_bottom'><i class='red'><i class='fa fa-sort-desc'></i>"+ Math.floor(porcentagem) +"%</i> do total</span>");
+}
+
+$("#tReport").append("<span class='count_top'><i class='fa fa-user'></i> Reports Totais </span>");
+$("#tReport").append("<div class='count'>"+ tPorts +"</div>");
+});
+
+$(document).ready(function(){
+<% top5labs = @top5_labs.to_json %>
+topLabs = <%= raw top5labs %>;
+
+  var options = {
+    legend: false,
+    responsive: false
+  };
+
+  var colorClass = ['fa fa-square blue', 'fa fa-square green', 'fa fa-square purple', 'fa fa-square aero', 'fa fa-square red'];
+  var labelClass = [];
+  var dataClass = [];
+
+  for(var i = 0; i < 5; i++){
+    if(i < topLabs.length){
+      $("#salasMax").append("<tr><td><p><i class ='"+colorClass[i]+"'></i>"+topLabs[i][0]+"</p></td><td>"+topLabs[i][1]+"</td></tr>");
+      labelClass.push(topLabs[i][0]);
+      dataClass.push(topLabs[i][1]);
+    }
+  }
+
+  new Chart(document.getElementById("canvasSala"), {
+    type: 'doughnut',
+    tooltipFillColor: "rgba(51, 51, 51, 0.55)",
+    data: {
+      labels: 
+        labelClass,
+      datasets: [{
+        data: 
+          dataClass,
+        backgroundColor: [
+          "#3498DB",
+          "#26B99A",
+          "#9B59B6",
+          "#BDC3C7",
+          "#E74C3C"
+        ],
+        hoverBackgroundColor: [
+          "#49A9EA",
+          "#36CAAB",
+          "#B370CF",
+          "#CFD4D8",
+          "#E95E4F"
+        ]
+      }]
+    },
+    options: options
+  });
+});
+
+$(document).ready(function() {
+<% last4rep = @last_4_reports.to_json %>
+lastReports = <%= raw last4rep%>;
+
+  for(var = 0; i > 4; i++){
+    if(i < lastReports.length){
+      $("#listReport").append("<li><div class='block'><div class='block_content'><h2 class='title'><a>"+ lastReports[i][6] +"</a></h2><div class='byline'><span>"+ lastReports[i][4] +"</span> by <a>"+ lastReports[i][11] +"</a></div></div></div></li>");
+    }
+  }
+});
+
 $(document).ready(function() {
   //Data1 seria o total de horas por dia no qual o lab ficou aberto
   var data1 = [
@@ -510,10 +619,10 @@ $(document).ready(function() {
       });
 });
 
-<% chart_json = @report.to_json %>
 
 $(document).ready(function(){
-  pc_reports_json = <%= raw chart_json %>; // json criado
+<% chart_json = @report.to_json %>
+pc_reports_json = <%= raw chart_json %>; // json criado
 
   var options = {
     legend: false,
