--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -498,14 +498,16 @@ topLabs = <%= raw top5labs %>;
   };
 
   var colorClass = ['fa fa-square blue', 'fa fa-square green', 'fa fa-square purple', 'fa fa-square aero', 'fa fa-square red'];
+  var selectedColor = 0;
   var labelClass = [];
   var dataClass = [];
 
   for(var i = 0; i < 5; i++){
     if(i < topLabs.length && topLabs[i][1] != 0){
-      $("#salasMax").append("<tr><td><p><i class ='"+colorClass[i]+"'></i>"+topLabs[i][0]+"</p></td><td>"+topLabs[i][1]+"</td></tr>");
+      $("#salasMax").append("<tr><td><p><i class ='"+colorClass[selectedColor]+"'></i>"+topLabs[i][0]+"</p></td><td>"+topLabs[i][1]+"</td></tr>");
       labelClass.push(topLabs[i][0]);
       dataClass.push(topLabs[i][1]);
+      selectedColor++;
     }
   }
 
@@ -630,14 +632,16 @@ pc_reports_json = <%= raw chart_json %>; // json criado
   };
 
   var colorClass = ['fa fa-square blue', 'fa fa-square green', 'fa fa-square purple', 'fa fa-square aero', 'fa fa-square red'];
+  var selectedColor = 0;
   var labelClass = [];
   var dataClass = [];
 
   for(var i = 0; i < 5; i++){
     if(i < pc_reports_json.length){
-      $("#reportMax").append("<tr><td><p><i class ='"+colorClass[i]+"'></i>"+pc_reports_json[i][0]+"</p></td><td>"+pc_reports_json[i][1]+"</td></tr>");
+      $("#reportMax").append("<tr><td><p><i class ='"+colorClass[selectedColor]+"'></i>"+pc_reports_json[i][0]+"</p></td><td>"+pc_reports_json[i][1]+"</td></tr>");
       labelClass.push(pc_reports_json[i][0]);
       dataClass.push(pc_reports_json[i][1]);
+      selectedColor++;
     }
   }
 
