Corrigido problema de alinhamento com o gráfico

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -253,6 +253,9 @@
         <div class="x_content">
           <table class="" style="width:100%">
             <tr>
+              <th style="width:37%;">
+                <p></p>
+              </th>
               <th>
                 <div class="col-lg-7 col-md-7 col-sm-7 col-xs-7">
                   <p class="">Salas</p>
