adicionada novas features ao css e adicionado novos gráficos/consertado antigos

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -24,6 +24,10 @@
 
 
 
+smallart{
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 1.65857; }
 
 .daterangepicker .ranges li {
   color: #73879C; }
